--- a/404.md
+++ b/404.md
@@ -1,3 +1,10 @@
+---
+layout: post
+permalink: /404.html
+---
+
+
+
 # Oops your linkshell connection has broken!
 
 Go replace ur chocobo fluids while I fix this problem (unless its ur problem then good luck).
